--- a/Main Stuff/readme
+++ b/Main Stuff/readme
@@ -1,4 +1,5 @@
 fun: All the custom patches used in my game.
+  Patch.txt: An updated version of the normal fun patch, but it works with FilterTool.  This is the one I will be updating in the future.
 drops: Enemies will always drop their unique drops.
 dropsoff: Turns it off.
 spawner: Enemies never stop spawning.
